--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <section class="gallery">
     <div class="swiper-container gallery__container">
       <div class="swiper-wrapper"></div>
-  
+      
+      <div class="swiper-pagination swiper-pagination-fraction swiper-pagination-horizontal"></div>
+
       <button class="gallery__button-left" disabled>«</button>
       <button class="gallery__button-right" disabled>»</button>
     </div>
