--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
 <body>
 
   <section class="gallery">
-    <div class="swiper-container gallery__container">
+    <div class="swiper-container gallery__container swiper mySwiper swiper-initialized swiper-horizontal swiper-backface-hidden">
       <div class="swiper-wrapper"></div>
       
       <div class="swiper-pagination swiper-pagination-fraction swiper-pagination-horizontal"></div>
