--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resolla Slider</title>
+  <title>Resolla Slider v11</title>
 
   <!-- swiper v11 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -19,6 +19,13 @@
   <section class="gallery">
     <div class="swiper-container gallery__container swiper mySwiper swiper-initialized swiper-horizontal swiper-backface-hidden">
       <div class="swiper-wrapper"></div>
+
+      <div class="swiper-slide" id="slide-smenshov-1" data-hash="slide1"><img src="https://resolla.com/faces/smenshov/1.jpg"></div>
+      <div class="swiper-slide" id="slide-smenshov-2" data-hash="slide2"><img src="https://resolla.com/faces/smenshov/2.jpg"></div>
+      <div class="swiper-slide" id="slide-smenshov-3" data-hash="slide3"><img src="https://resolla.com/faces/smenshov/3.jpg"></div>
+      <div class="swiper-slide" id="slide-smenshov-4" data-hash="slide4"><img src="https://resolla.com/faces/smenshov/4.jpg"></div>
+      <div class="swiper-slide" id="slide-smenshov-5" data-hash="slide5"><img src="https://resolla.com/faces/smenshov/5.jpg"></div>
+      <div class="swiper-slide" id="slide-smenshov-6" data-hash="slide6"><img src="https://resolla.com/faces/smenshov/6.jpg"></div>
       
       <div class="swiper-pagination swiper-pagination-fraction swiper-pagination-horizontal"></div>
 
