--- a/index2.html
+++ b/index2.html
@@ -27,6 +27,13 @@
       <div class="swiper-slide" id="slide-smenshov-5" data-hash="slide5"><img src="https://resolla.com/faces/smenshov/5.jpg"></div>
       <div class="swiper-slide" id="slide-smenshov-6" data-hash="slide6"><img src="https://resolla.com/faces/smenshov/6.jpg"></div>
 
+      <div class="swiper-slide" id="slide-smenshov-7" data-hash="7"><img src="https://resolla.com/faces/smenshov/7.jpg"></div>
+      <div class="swiper-slide" id="slide-smenshov-8" data-hash="8"><img src="https://resolla.com/faces/smenshov/8.jpg"></div>
+      <div class="swiper-slide" id="slide-smenshov-9" data-hash="9"><img src="https://resolla.com/faces/smenshov/9.jpg"></div>
+      <div class="swiper-slide" id="slide-smenshov-10" data-hash="10"><img src="https://resolla.com/faces/smenshov/10.jpg"></div>
+      <div class="swiper-slide" id="slide-smenshov-11" data-hash="11"><img src="https://resolla.com/faces/smenshov/11.jpg"></div>
+      <div class="swiper-slide" id="slide-smenshov-12" data-hash="12"><img src="https://resolla.com/faces/smenshov/12.jpg"></div>
+
       </div>
       <div class="swiper-pagination swiper-pagination-fraction swiper-pagination-horizontal"></div>
 
