--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-  <section class="gallery">
+  <section class="gallery" id="slidr">
     <div class="swiper-container gallery__container swiper mySwiper swiper-initialized swiper-horizontal swiper-backface-hidden">
       <div class="swiper-wrapper">
 <!--
