--- a/index6.html
+++ b/index6.html
@@ -35,6 +35,6 @@
   </section>
 
   <script src="main.js"></script>
-  <script type="module" src="worker.js"></script>
+  <script type="module" src="worker6.js"></script>
 </body>
 </html>
