--- a/index6.html
+++ b/index6.html
@@ -13,6 +13,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
+  <script type="module">
+function slideslide() {
+	let sliderhash = Number(window.location.hash.replace("#",""));
+	const swiper = document.querySelector('.swiper-container').swiper;
+	if (swiper.slides.length < sliderhash) {
+		console.log(sliderhash,'>',swiper.slides.length);
+		for (let sl=swiper.slides.length+1; sl<=sliderhash; sl++) {
+			swiper.appendSlide('<div class="swiper-slide" data-hash="'+sl.toString()+'">Slide '+sl.toString()+'</div>');
+			console.log('sl= ',sl);
+		}
+	}
+	console.log(sliderhash,' new len ',swiper.slides.length);
+	swiper.slideTo(sliderhash, 50, false);
+}
+  </script>
 </head>
 <body onhashchange="slideslide()" onload="slideslide()">
 
