--- a/index6.html
+++ b/index6.html
@@ -34,7 +34,7 @@ function slideslide() {
   <section class="gallery">
     <div class="swiper-container gallery__container">
       <div class="swiper-wrapper"></div>
-        <div class="swiper-slide swiper-slide-active" style="background-image: linear-gradient(45deg, rgba(255,0,0,0.5), rgba(255,255,0,0.5));" role="group" aria-label="1 / 9" data-hash="1">Slide 1</div>
+        <!--div class="swiper-slide swiper-slide-active" style="background-image: linear-gradient(45deg, rgba(255,0,0,0.5), rgba(255,255,0,0.5));" role="group" aria-label="1 / 9" data-hash="1">Slide 1</div>
         <div class="swiper-slide swiper-slide-next" style="" role="group" aria-label="2 / 9" data-hash="2">Slide 2</div>
         <div class="swiper-slide" style="" role="group" aria-label="3 / 9" data-hash="3">Slide 3</div>
         <div class="swiper-slide" style="" role="group" aria-label="4 / 9" data-hash="4">Slide 4</div>
@@ -42,7 +42,7 @@ function slideslide() {
         <div class="swiper-slide" style="" role="group" aria-label="6 / 9" data-hash="6">Slide 6</div>
         <div class="swiper-slide" style="" role="group" aria-label="7 / 9" data-hash="7">Slide 7</div>
         <div class="swiper-slide" style="" role="group" aria-label="8 / 9" data-hash="8">Slide 8</div>
-        <div class="swiper-slide" style="" role="group" aria-label="9 / 9" data-hash="9">Slide 9</div>      
+        <div class="swiper-slide" style="" role="group" aria-label="9 / 9" data-hash="9">Slide 9</div-->      
       <div class="swiper-pagination swiper-pagination-fraction swiper-pagination-horizontal"></div>
       <button class="gallery__button-left" disabled>«</button>
       <button class="gallery__button-right" disabled>»</button>
